# gnome-c-utils

./: Makefile.am  NEWS  README  README.md  configure.ac  meson.build
check-chain-ups/: .gitignore  Makefile  check-chain-ups.c
lineup-parameters/: .gitignore  Makefile  lineup-parameters.c  sample.c
lineup-substitution/: .gitignore  Makefile  lineup-substitution.c  sample.c
multi-line-substitution/: .gitignore  Makefile  license-header-old  multi-line-substitution.c
smart-c-comment-substitution/: .gitignore  Makefile  smart-c-comment-substitution.c
src/: Makefile.am  check-chain-ups.c  gcu-align-params-on-parenthesis.c  gcu-case-converter.c  gcu-check-chain-ups.c  gcu-include-config-h.c  gcu-lineup-parameters.c  gcu-lineup-substitution.c  gcu-multi-line-substitution.c  gcu-smart-c-comment-substitution.c  gobject-renamer.sh  lineup-parameters.c  lineup-substitution.c  meson.build  multi-line-substitution.c
src/gobject-boilerplate/: class-GNU-indent.c  class-GNU-indent.h  class-devhelp.c  class-devhelp.h  class-old-style.c  class-old-style.h  class.c  class.h  generate-class-GNU-indent.sh  generate-class-common.sh  generate-class-devhelp.sh  generate-class-old-style.sh  generate-class.sh  generate-interface-GNU-indent.sh  generate-interface-common.sh  generate-interface-old-style.sh  generate-interface.sh  interface-GNU-indent.c  interface-GNU-indent.h  interface-old-style.c  interface-old-style.h  interface.c  interface.h
tests/: Makefile.am
tests/gcu-align-params-on-parenthesis/: input-sample  input-sample-invalid
tests/gcu-multi-line-substitution/: license-header-new
tests/gcu-smart-c-comment-substitution/: replacement-text-example1
tests/lineup-substitution/: sample.c
tests/multi-line-substitution/: license-header-new
tests/smart-c-comment-substitution/: search-text-example1
