EXTRA_DIST =								\
	lineup-parameters/sample.c					\
	lineup-substitution/sample.c					\
	multi-line-substitution/license-header-new			\
	multi-line-substitution/license-header-old			\
	smart-c-comment-substitution/replacement-text-example1		\
	smart-c-comment-substitution/search-text-example1

-include $(top_srcdir)/git.mk
