EXTRA_DIST =								\
	gcu-lineup-parameters/sample.c					\
	gcu-lineup-substitution/sample.c				\
	gcu-multi-line-substitution/license-header-new			\
	gcu-multi-line-substitution/license-header-old			\
	gcu-smart-c-comment-substitution/replacement-text-example1	\
	gcu-smart-c-comment-substitution/search-text-example1

-include $(top_srcdir)/git.mk
